--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ * {
+   box-sizing: border-box;
+ }
+/* box-sixingはpaddingやborderの設定を行っても要素の大きさはwidthやheightで指定したサイズのまま変わらなくなるプロパティ */
+/* また『*』というセレクターは全ての要素に適用させるという意味 */
