サイドバーとチャット画面ファイルの分割

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Messages#index</h1>
-<p>Find me in app/views/messages/index.html.erb</p>
+<div class="wrapper">
+  <%= render "side_bar" %>
+  <%= render "main_chat"%>
+</div>
+<%# 部分テンプレートの読み込み %>
+<%# _main_side_bar.html.erb  _main_chat.html.erb ファイルを読み込んでいる。記述する時はファイル名先頭の_や拡張子は必要ない  %>
