--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -6,14 +6,40 @@
   width: 300px;
   height: 100vh;
 }
+
+
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+.header-name a {
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+.create-room a {
+  border: 1px solid lightblue;
+  padding: 14px; 
+  text-decoration: none;
+  font-size: 10px;
+  color: deepskyblue;
+}
+
 .rooms {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}
+.room {
+  padding: 20px 0 40px;
+}
+.room-name a {
+  text-decoration: none;
+  color: white;
 }
 
 
@@ -21,6 +47,7 @@
   background-color: #FFFFFF;
   width: calc(100vw - 300px);
 }
+.chat-header {
   height: 100px;
   padding: 0 40px;
 }
