--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,3 +1,5 @@
+<%# メイン部のテンプレートビュー %>
+
 <div class="chat-header">
   <div class="left-header">
     <div class="header-title">
@@ -45,13 +47,14 @@
   </div>
 </div>
 
-<div class="form">
-  <div class="form-input">
-    <input class="form-message" placeholder= "type a message">
+<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+<%# データ送り先はmodel(どのモデル？) %>
+  <div class="form_input">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
     <label class="form-image">
       <span class="image-file">画像</span>
-      <input type="file" class="hidden">
+      <%= f.file_field :image, class: 'hidden' %>
     </label>
   </div>
-  <input class="form-submit" type="submit" value="送信">
-</div>
+  <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
