チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -3,7 +3,7 @@
 <div class="chat-header">
   <div class="left-header">
     <div class="header-title">
-      hogehuge
+      <%= @room.name %>
     </div>
   </div>
   <div class="right-header">
