投稿時刻の日本時間への修正

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -8,7 +8,8 @@
     </div>
     <div class="message-date">
       <!-- 投稿した時刻を出力する -->
-      <%= message.created_at %>
+      <%= l message.created_at %>
+      <!-- lメソッド 指定した現地時間にする。日本時間の指定はconfig/application.rb と config/locales/ja.yml で行われている -->
     </div>
   </div>
   <div class="lower-message">
